2006-05-16  Wakaba  <wakaba@suika.fam.cx>

	* daf.pl: Generation of Perl modules and
	tests are split into separate modules.

2006-04-09  Wakaba  <wakaba@suika.fam.cx>

	* daf.pl (daf_generate_perl_test): Old |PerlCode| methods
	are replaced by new ones.

2006-04-04  Wakaba  <wakaba@suika.fam.cx>

	* daf.pl (--dafs-suffix): New option.
	(daf_resolve_db_module_file): The |dp:ModuleNodeStorageFile|
	type support.

2006-04-03  Wakaba  <wakaba@suika.fam.cx>

	* daf.pl (perl-pm): Sets the |impl| argument
	of the |pl_generate_perl_module| method.

2006-04-01  Wakaba  <wakaba@suika.fam.cx>

	* daf.pl (perl-pm, daf_generate_perl_test): Sets
	the |$Message::Util::DIS::Perl::Implementation| variable
	for compatibility.

2006-03-18  Wakaba  <wakaba@suika.fam.cx>

	* daf.pl (daf_get_file_path_stem): The '.' is removed from
	the default search path.

2006-03-17  Wakaba  <wakaba@suika.fam.cx>

	* daf.pl: The position of two |undef| statements was incorrect.
	(daf_generate_perl_test): Provides |--skip| option
	for test scripts.

2006-03-16  Wakaba  <wakaba@suika.fam.cx>

	* daf.pl: In parser tests |c:anyDOMConfigurationParameter|
	properties are supported.

2006-03-12  Wakaba  <wakaba@suika.fam.cx>

	* daf.pl: Don't require |Test| modules for bootstrap.

2006-03-06  Wakaba  <wakaba@suika.fam.cx>

	* daf.pl (get_referring_module_uri_list): Don't 
	invoke |daf_convert_dis_document_to_dnl_document| to prevent
	prefix-not-defined error because the referred module is not
	yet loaded.

2006-02-26  Wakaba  <wakaba@suika.fam.cx>

	* daf.pl: Request for |fe:GenericLS| feature was missing.
	Sets the |pc:preserve-line-break| parameter for test
	code as |dac2test.pl| had been.

	* dac.pl, dac2pm.pl, dac2test.pl: Removed.

	* disc.pl, cdis2pm.pl, cdis2rdf.pl: Removed.

2006-02-26  Wakaba  <wakaba@suika.fam.cx>

	* daf.pl: Perl test file generation support from |dac2test.pl|
	is added.  Exits the program before any generation
	if the database constrution process has error.
