@@ -20,6 +20,8 @@ PERLC_OPTIONS =
 PERLC_OPTIONS_ALL = $(PERLC_OPTIONS) -I$(MANAKAI_LIB_DIR)
 PERL_CHK = $(PERLC) $(PERLC_OPTIONS_ALL)
 
+NS_ATOM       = http://suika.fam.cx/~wakaba/archive/2005/manakai/Markup/Atom/
+NS_MANAKAIDOM = http://suika.fam.cx/~wakaba/archive/2004/8/18/manakai-dom\#
 NS_MARKUP     = http://suika.fam.cx/~wakaba/archive/2005/manakai/Markup\#
 
 DIS_OPTIONS = 
@@ -50,6 +52,12 @@ $(PM_FILES): %$(PM_SUFFIX): %$(DIS_SUFFIX) $(DAF_PL)
 	$(DAF) --create-perl-module="$(NS_MARKUP)$* $@"
 	$(PERL_CHK) $@
 
+## temporary
+atom: $(DAF_PL)
+	$(DAF) \
+	  --load-module="$(NS_MARKUP)Atom" \
+	  --create-dtd-modules="$(NS_ATOM)Atom . $(NS_MANAKAIDOM)ManakaiDOMLatest"
+
 clean:
 	$(RMALL) $(GENERATED_FILES) .*.tmp *~ .*~
 
@@ -58,5 +66,5 @@ clean-db:
 
 distclean: clean clean-db
 
-## $Date: 2006/05/06 07:02:59 $
+## $Date: 2006/05/19 11:02:11 $
 ## License: Public Domain.
