@@ -1,3 +1,9 @@
+2006-05-19  Wakaba  <wakaba@suika.fam.cx>
+
+	* Atom.dis: Module definitions are added experimentally.
+
+	* Makefile: Experimental rules are added.
+
 2006-05-06  Wakaba  <wakaba@suika.fam.cx>
 
 	* Atom.dis (contentElement): New attribute.
