@@ -1,3 +1,9 @@
+2006-05-19  Wakaba  <wakaba@suika.fam.cx>
+
+	* DISMarkup.dis, XML.dis: Definitions are added.
+
+	* daf-dtd-modules.pl: New script.
+
 2006-05-18  Wakaba  <wakaba@suika.fam.cx>
 
 	* DISMarkup.dis, XML.dis: Definitions are added.
