@@ -1,3 +1,8 @@
+2006-05-19  Wakaba  <wakaba@suika.fam.cx>
+
+	* daf.pl (--load-module): New option.
+	(--create-dtd-modules): New option.
+
 2006-05-16  Wakaba  <wakaba@suika.fam.cx>
 
 	* daf.pl: Generation of Perl modules and
